--- a/layouts/partials/warframe-page/frame-build-card.html
+++ b/layouts/partials/warframe-page/frame-build-card.html
@@ -1,7 +1,7 @@
 <article class="card">
 	<div class="card-image">
-		<figure class="image is-16by9">
-			<a href="{{ .Permalink }}" title="{{ .Title }}"><img src="{{ .Params.image }}" alt="{{ .Title }}"></a>
+		<figure  width="360">
+			<a href="{{ .Permalink }}" title="{{ .Title }}"><img class="img-fluid" src="{{ .Params.image }}" alt="{{ .Title }}"></a>
 		</figure>
 	</div>
 	<div class="card-content">
