Add warframe list section to the warframe pages

--- a/layouts/warframes/single.html
+++ b/layouts/warframes/single.html
@@ -47,40 +47,31 @@
 	</div>
 </section>
 {{- end -}}
+{{- define "footer-body" -}}
+<div class="col-md-12 text-left">
+	<h2 class="title">Explore more warframes</h2>
+</div>
+<div class="col-md-12 warframe-list">
+	<div class="row">
+	{{ $frame := index .Site.Data.frames (lower .Title) }}
+	{{ range .Site.Data.warframebuilds }}
+		{{ if and (.link) (ne .name (lower $frame.name)) }}
+			<div class="col-6 col-sm-3 col-md-2">
+				<div class="warframe-element" data-roles="any">
+					<a href="{{ .link }}" target="_blank" title="Warframe {{ .title }}">
+						<h2>{{ .title }}</h2>
+						<img src="/images/glyphs/{{ .glyph }}" title="Warframe {{ .title }}" alt="{{ .title }}" />
+					</a>
+				</div>
+			</div>
+		{{ end }}
+	{{ end }}
+	</div>
+</div>
+{{- end -}}
 {{- define "body" -}}
 <body class="warframe-page" style="background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(46, 49, 65, 0.7)), to(rgba(46, 49, 65, 0.7))), url({{ .Params.image }});background-image: -webkit-linear-gradient(bottom, rgba(46, 49, 65, 0.7), rgba(46, 49, 65, 0.7)), url({{ .Params.image }});background-image: -o-linear-gradient(bottom, rgba(46, 49, 65, 0.7), rgba(46, 49, 65, 0.7)), url({{ .Params.image }});background-image: linear-gradient(to top, rgba(46, 49, 65, 0.7), rgba(46, 49, 65, 0.7)), url({{ .Params.image }});">
 	{{ $frame := index .Site.Data.frames (lower .Title) }}
 
-	<footer class="section footer">
-		<div class="container">
-			<div class="columns has-text-left">
-				<div class="column is-offset-2-desktop is-8-desktop is-12-mobile">
-					<h2 class="frame-page-title">Explore more warframes</h2>
-				</div>
-			</div>
-			<div class="columns is-multiline is-mobile has-text-centered warframe-list">
-				{{ range .Site.Data.warframebuilds }}
-					{{ if and (.link) (ne .name (lower $frame.name)) }}
-						<div class="column is-2-desktop is-3-tablet is-4-mobile">
-							<div class="warframe-element" data-roles="any">
-								<a href="{{ .link }}" target="_blank" title="Warframe {{ .title }}">
-									<h2>{{ .title }}</h2>
-									<img src="/images/glyphs/{{ .glyph }}" title="Warframe {{ .title }}" alt="{{ .title }}" />
-								</a>
-							</div>
-						</div>
-					{{ end }}
-				{{ end }}
-			</div>
-			<div class="columns has-text-left">
-				<div class="column is-offset-2 is-8">
-					<hr>
-					<a href="{{ .Site.BaseURL }}">Warframe Blog</a> has no official link with Digital Extremes or Warframe, we are just a fan site.
-				</div>
-			</div>
-				
-		</div>
-	</footer>
-	<script src='/assets/js/warframe-page.js'></script>
 </body>
 {{- end -}}
