--- a/layouts/partials/warframe-page/ability-section.html
+++ b/layouts/partials/warframe-page/ability-section.html
@@ -10,7 +10,7 @@
 			<div class="col-md-6 {{- cond (eq .side "right") " order-md-first" "" -}}">
 				{{- $alignContent := cond (eq .side "left") " justify-content-start" " justify-content-end" -}}
 				<h2 class="title d-flex {{- $alignContent -}}">{{ .ability.name }}</h2>
-				<div class="abiility-description content d-flex {{- $alignContent -}}">
+				<div class="abiility-description content  {{- $alignContent -}}">
 					{{ .ability.description | safeHTML }}
 				</div>
 			</div>
